--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>TMIS Ćwiczenia WTF 2023</title>
-	<link href="style.css" rel="stylesheet" type="text/css">
-	<link href="normalize.css" rel="stylesheet" type="text/css">
+	<link href="/style.css" rel="stylesheet" type="text/css">
+	<link href="/normalize.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	<header>
-		<nav class="main-nav" id="top">
-			<a href="index.html">Strona główna</a>
-			<a href="nauka-html.html">Znaczniki HTML</a>
-			<a href="nauka-css.html">Nauka CSS</a>
+		<nav class="navigation main-nav" id="top">
+			<a class="navigation__link" href="index.html">Strona główna</a>
+			<a class="navigation__link" href="nauka-html.html">Znaczniki HTML</a>
+			<a class="navigation__link" href="nauka-css.html">Nauka CSS</a>
 		</nav>
 	</header>
 	<main class="main-content">
 		<header>
-			<h1>Praca domowa z M02</h1>
+			<h1 class="page-title">Praca domowa z M02</h1>
 		</header>
-		<section>
-			<h2 class="header-2">Kim jestem</h2>
+		<section class="section">
+			<h2 class="section__title">Kim jestem</h2>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet leo nisl. Cras tempus sapien vel
 				malesuada gravida. <a href="https://www.google.pl" target="_blank">Maecenas condimentum</a> accumsan
@@ -40,10 +40,10 @@
 				<a href="#gitHub">Przewiń do artykułu o GitHub</a>
 			</p>
 		</section>
-		<section>
-			<h2 class="header-2">Po co robię to szkolenie?</h2>
-			<article>
-				<h3>Co będzie jak skończę to szkolenie?</h3>
+		<section class="section">
+			<h2 class="section__title">Po co robię to szkolenie?</h2>
+			<article class="article">
+				<h3 class="article__title">Co będzie jak skończę to szkolenie?</h3>
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
@@ -54,9 +54,9 @@
 					justo.
 				</p>
 			</article>
-			<article>
-				<h3 class="header-2">Czy to nie powinno być w strukturze jako dziecko "section" z h2?</h3>
-				<img src="lock_icon.png" alt="kłódka" height="80">
+			<article class="article">
+				<h3 class="article__title">Czy to nie powinno być w strukturze jako dziecko "section" z h2?</h3>
+				<img src="/lock_icon.png" alt="kłódka" height="80">
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
@@ -68,7 +68,7 @@
 				</p>
 			</article>
 			<article id="gitHub">
-				<h3 class="header-3">Dopisałem to, żeby zobaczyć jak odnotuje to GitHub</h3>
+				<h3 class="article__title">Dopisałem to, żeby zobaczyć jak odnotuje to GitHub</h3>
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
@@ -79,8 +79,8 @@
 					justo.
 				</p>
 			</article>
-			<article>
-				<h3 class="header-3">Kolejne artykuły, żeby wydłużyć stronę</h3>
+			<article class="article">
+				<h3 class="article__title">Kolejne artykuły, żeby wydłużyć stronę</h3>
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
@@ -91,8 +91,8 @@
 					justo.
 				</p>
 			</article>
-			<article>
-				<h3 class="header-3">Kolejne artykuły, żeby wydłużyć stronę</h3>
+			<article class="article">
+				<h3 class="article__title">Kolejne artykuły, żeby wydłużyć stronę</h3>
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
@@ -103,8 +103,8 @@
 					justo.
 				</p>
 			</article>
-			<article>
-				<h3 class="header-3">Kolejne artykuły, żeby wydłużyć stronę</h3>
+			<article class="article">
+				<h3 class="article__title">Kolejne artykuły, żeby wydłużyć stronę</h3>
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
@@ -115,15 +115,15 @@
 					justo.
 				</p>
 			</article>
-			<section>
-				<h2 class="header-2">Tutaj wrzucam zmiany w ramach testów GitHub</h2>
+			<article class="article">
+				<h2 class="article__title">Tutaj wrzucam zmiany w ramach testów GitHub</h2>
 				<p>
 					Ta linijka wyląduje na GitHub.com
 				</p>
-			</section>
+			</article>
 		</section>
 	</main>
-	<footer>
+	<footer class="page-footer">
 		<br>
 		<hr>
 		<p>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a></p>
